[package]
name = "ruuvimqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# pieru

[dependencies]
btleplug = "0.10.4"
clap = { version = "3.*", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
ntex = { version = "0.6", features = ["tokio"] }
ntex-mqtt = "0.10.2"
ruuvi-sensor-protocol = "0.6.1"
futures = "0.3.25"
log = "0.4.0"
env_logger = "0.9.0"
regex = "1.7.0"
uuid = { version = "1.3.0", features = ["v4"]}
